--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to Skiddy Cliff's GitHub homepage!
+description: Check out the game on the Apple App Store & Google Play Store!
